# ptymark

./: .agents  .devcontainer  .do-not-create-more-files  .dockerignore  .doctor-sync-trigger  .gitignore  .gitmodules  .markdownlint.json  .refactor_runtime_once.part00  .refactor_runtime_once.part01  .refactor_runtime_once.part02  .refactor_runtime_once.part03  .refactor_runtime_once.part04  .release-candidate-plan.md  .release-diagnostic-rerun  .source-only-policy-last-trigger  .source-only-policy-pr-trigger  .source-only-policy-trigger  .vscode  .wiki-verify-trigger  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  GNUmakefile  LICENSE  Makefile  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  agents  apply_doctor.py  diagnostics_fix.b85  diagnostics_patch.b85  doctor_payload.b85  evidence  issue_rebaseline_payload.b85  pr102-ci-failure-summary.txt  pr102-windows-renderer-failure.txt  (+13 more)
.agent-canon/: .gitignore  update-state.toml
.alpha2-payload/: part00.b85  part01.b85  part02.b85
.codex/: README.md  agents  config.toml  hooks  hooks.json
.github/: AGENTS.md  CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  terminal-compatibility.yml
.github/PULL_REQUEST_TEMPLATE/: agent_canon.md
.github/scripts/: apply_release_candidate_fixes.py  checkout_agent_canon_submodule.sh  repair_ptymark_dependency_headers.py
.github/workflows/: agent-canon-diagnostic-once.yml  agent-canon-diagnostic.yml  agent-canon-finalize-once.yml  agent-canon-header-commit.yml  agent-canon-repair.yml  agent-coordination.yml  agent-improvement-guide.yml  alpha2-source-snapshot-once.yml  apply-alpha2-release-once.yml  apply-diagnostics-redaction-once.yml  apply-doctor-v1-once.yml  apply-doctor-v1-pr.yml  apply-source-only-release-policy-once.yml  capture-diagnostics-clippy.yml  capture-diagnostics-format.yml  capture-doctor-v1-checks.yml  ci.yml  cleanup-source-only-policy-once.yml  cleanup-source-only-pr-head-once.yml  cleanup-source-only-pr-marker-once.yml  codeql.yml  dependency-review.yml  diagnose-agent-canon-clean.yml  diagnose-agent-canon-node24.yml  diagnose-agent-canon-pr.yml  diagnose-agent-canon-tail.yml  diagnose-fresh-clone.yml  diagnose-pr100-ci-once.yml  diagnose-pr109-ci.yml  docker-build.yml  enforce-source-only-final-once.yml  export-pr102-ci-failure.yml  export-pr102-windows-renderer-failure.yml  export-pr107-object-failure.yml  export-pr108-docker-failure.yml  export-pr85-ci-failure.yml  final-actions-artifact-purge.yml  final-source-only-cleanup-once.yml  finalize-diagnostics-once.yml  finalize-doctor-v1-second-once.yml  (+84 more)
.ptymark-bootstrap/: renderer-architecture.part-00  renderer-architecture.part-01
.release-payload/: part00.b85
cmake/: README.md
compat/shell-integrations/: bash.tsv  fish.tsv  nushell.tsv  (+2 more)
distribution/: install.cmd  install.ps1  install.sh
docker/: Dockerfile  README.md  check_build.sh  codex-container-profiles.toml  install_python_dependencies.sh  ptymark-compose.yaml  ptymark-versions.env  ptymark.Dockerfile  python-execution-rules.toml  register_safe_directories.sh  requirements-dev.txt  requirements-runtime.txt  requirements.txt
documents/: README.md  architecture.md  configuration.md  dependencies.md  dependency-layers.md  design-review.md  development-environment.md  distribution.md  extension-guide.md  filtered-command.md  interactive-session.md  licensing-policy.md  linux-wsl-host-requirements.md  ptymark-design.md  ptymark-installer.md  ptymark-runtime-dependencies.md  release.md  remote-execution-repo-contract.md  renderer-architecture.md  repository-audit-checklist.md  server-host-contract.md  shell-plugin-compatibility.md  system-design.md  template-bootstrap.md  template-github-remote.md  troubleshooting.md  ui-design.md  usage.md
examples/: README.md  benchmark_core.rs  external-engines.toml  ptymark.example.toml  ptymark.toml  wezterm.lua
experiments/: README.md  registry.toml
memory/: AGENT_PHILOSOPHY.md  README.md  USER_PREFERENCES.md
notes/: README.md  github-mirror-procedure.md
plugin/: init.lua
references/: README.md
release-notes/: 0.1.0-alpha.2.md
renderers/: benchmark.mjs  check.mjs  managed-bundle.env  package-lock.json  package.json  worker.mjs
scripts/: README.md  apply-source-only-policy-once.py  benchmark-ptymark-renderers.sh  build-release-manifest.py  check-ptymark-benchmarks.py  check-ptymark-dependencies.sh  check-ptymark-renderers.sh  check-ptymark-runtime-dependencies.mjs  check-python-dependency-layers.py  check-release-metadata.py  init_from_template.sh  install-managed-bundle.ps1  install-managed-bundle.sh  install.ps1  install.sh  installer.cmd  installer.ps1  installer.sh  package-ptymark-release.sh  package-release.ps1  package-release.sh  ptymark-dev-container.sh  publish-alpha2-wiki.py  start_repository.sh
src/: README.md  artifact.rs  cache.rs  cli.rs  cli_args.rs  command.rs  config.rs  coordinator.rs  detector.rs  diagnostics.rs  doctor.rs  engine.rs  filtered_run.rs  fingerprint.rs  install.rs  interactive.rs  lib.rs  main.rs  managed_launcher.rs  model.rs  native_session.rs  pipeline.rs  predisplay.rs  presenter.rs  process_engine.rs  render.rs  renderer.rs  routing.rs  runtime.rs  stream.rs  terminal.rs  ui.rs
tests/: __init__.py  cli_contract.rs  config_contract.rs  coordinator_contract.rs  diagnostics_contract.rs  doctor_contract.rs  extension_validation_contract.rs  filtered_run_contract.rs  install_cli_contract.rs  install_contract.rs  install_reprobe_contract.rs  install_smoke.sh  interactive_pty_contract.rs  issue_form_contract.rs  managed_renderer_smoke.sh  pipeline_contract.rs  plugin_smoke.lua  predisplay_contract.rs  routing_contract.rs  runtime_contract.rs  runtime_factory_contract.rs  runtime_override_contract.rs  shell_plugin_compatibility.rs  shell_profile_coexistence.sh  terminal_compat.rs  verification_manifest_contract.rs  windows_contract.rs  windows_managed_renderer_smoke.ps1  windows_shell_profile_coexistence.ps1
verification/: README.md  manifest.toml
wiki_payload/: part00.b85  part01.b85  part02.b85  part03.b85  part04.b85
(+115 files in other folders)
