# @dependency-start
# contract configuration
# responsibility Defines package metadata, dependencies, compatibility, and release profile.
# upstream environment rust-toolchain.toml compiler pin
# downstream implementation Cargo.lock resolved dependency graph
# downstream implementation src/lib.rs library surface
# downstream implementation tests/cli_contract.rs CLI validation
# @dependency-end

[package]
name = "ptymark"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.97.0"
description = "Pre-display renderer for explicit semantic blocks in terminal output"
license = "Apache-2.0"
repository = "https://github.com/iwashita-nozomu/ptymark"
readme = "README.md"
keywords = ["terminal", "markdown", "mermaid", "math", "wezterm"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
